added_checkout_button

--- a/templates/main.html
+++ b/templates/main.html
@@ -25,7 +25,7 @@
     </template>
     
     <div id="cart">
-        
+        <button onclick="checkout()">checkout</button>
       
     </div>
 
