--- a/static/main.css
+++ b/static/main.css
@@ -1,4 +1,4 @@
-.menu-item{
+/* .menu-item{
     border: 1px solid black;
     padding: 10px;
     margin: 10px;
@@ -25,4 +25,4 @@
      border: 1px solid black;
       width: 300px; 
     text-align: center;
-}
+} */
