--- a/templates/main.html
+++ b/templates/main.html
@@ -6,51 +6,82 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="static/main.css">
+    <link rel="stylesheet" href="static/menu.css">
+    <link rel="stylesheet" href="static/cart.css">
 </head>
 
 <body>
 
 
     <template id="cart_template">
-        <div style="border: 1px solid black; border-radius: 10px;">
-            <h1 v="foodName-textContent"></h1>
-            <h3 v="price-textContent"></h3>
-            <h3 d="quantity-textContent"></h3>
-            <div class="buttons" style="display: flex;">
 
-                <button onclick="update_data_and_subscribers(get_nearest_data_subscription(this), 'quantity', get_nearest_data_subscription(this).quantity - 1)">-</button>
-                <button onclick="update_data_and_subscribers(get_nearest_data_subscription(this), 'quantity', get_nearest_data_subscription(this).quantity + 1)">+</button>
+        <div class="CartItem">
+
+            <div class="text-and-image" style='display: "flex"; justify-content: "space-between"; '>
+                <div class="text">
+
+                    <h1 v="foodName-textContent"></h1>
+                    <p v="price-textContent"></p>
+                    <p d="quantity-textContent"></p>
+
+                    <div class="cannot-edit-message">you cannot edit this while in checkout</div>
+                    <div class="buttons">
+                        <button
+                            onclick="update_data_and_subscribers(get_nearest_data_subscription(this), 'quantity', get_nearest_data_subscription(this).quantity - 1)">-</button>
+                        <button
+                            onclick="update_data_and_subscribers(get_nearest_data_subscription(this), 'quantity', get_nearest_data_subscription(this).quantity + 1)">+</button>
+                        <button
+                           class="x" onclick="delete get_nearest_data_subscription(this); this.parentElement.parentElement.remove();">X</button>
+                    </div>
+                </div>
             </div>
         </div>
+        <!-- <img width="70px" height="70px" alt="" style=' padding: "4%";' /> -->
+        </div>
+        </div>
     </template>
-    
-    <div id="cart">
+
+
+    <div id="cart-sidebar">
+
+        <div id="cart"></div>
         <button onclick="checkout()">checkout</button>
-      
+
+        <div class="cart-icon">
+            <span>&#x1F6D2;</span>
+        </div>
+
+        <button onclick="checkout()"> <span class="icon">&#x1F69A;</span> Checkout</button>
+
+
     </div>
 
 
     <template id="options_template">
-        <div class="menu-item" data-subscription-key="hello">
 
-            <img v="image_url-src" style="width: 100%" alt="">
-            <br>
-            <span v="foodName-textContent"></span>
-            <span v="price-textContent"></span>
-            <br>
-            <button 
-            onclick="update_data_and_subscribers_with_key(nearest_parrent_data_subscription_key(this), 
-            'foodName', get_nearest_data_subscription(this)['price'])">
-                hello
-            </button>
-            <button onclick="add_to_cart(get_nearest_data_subscription(this))">add to cart</button>
+
+        <div class="item">
+            <div class="img">
+                <img v="image_url-src" alt="">
+            </div>
+
+            <div class="text">
+                <h1 v="foodName-textContent"></h1>
+                <h2 d="price-textContent"></h2>
+                <p v="description-textContent"></p>
+                <div class="cannot-edit-message" style="display: none;">you cannot edit this while in checkout</div>
+                <button class="add-to-cart" onclick="add_to_cart(get_nearest_data_subscription(this))">Add to
+                    Cart</button>
+            </div>
         </div>
+
 
     </template>
 
 
     <template id="catagory_template">
-        <h1 style="width: 100%; text-align: center;" v="category-textContent" computed-sk0-category="pad-textContent"></h1>
+        <h1 style="width: 100%; text-align: center;" v="category-textContent" computed-sk0-category="pad-textContent">
+        </h1>
         <div blt="options"></div>
     </template>
 
@@ -62,7 +93,7 @@
     <main id="main"></main>
 
 
-    <script src="static/main.js">
+    <script src="static/main.js?v=1.1">
     </script>
     <script src="static/new.js"></script>
 
