added_images_to_cart

--- a/templates/main.html
+++ b/templates/main.html
@@ -12,7 +12,6 @@
 
 <body>
 
-
     <template id="cart_template">
 
         <div class="CartItem">
@@ -23,6 +22,8 @@
                     <h1 v="foodName-textContent"></h1>
                     <p v="price-textContent"></p>
                     <p d="quantity-textContent"></p>
+
+                    <img v="img_url-img_url" alt=""/>
 
                     <div class="cannot-edit-message">you cannot edit this while in checkout</div>
                     <div class="buttons">
