empty commit message

--- a/templates/main.html
+++ b/templates/main.html
@@ -23,7 +23,7 @@
                     <p v="price-textContent"></p>
                     <p d="quantity-textContent"></p>
 
-                    <img v="img_url-img_url" alt=""/>
+                    <img v="image_url-src" alt=""/>
 
                     <div class="cannot-edit-message">you cannot edit this while in checkout</div>
                     <div class="buttons">
