--- a/templates/main.html
+++ b/templates/main.html
@@ -98,6 +98,7 @@
     <main id="main"></main>
 
 
+    <script src="static/data.js"></script>
     <script src="static/main.js?v=1.1">
     </script>
     <script src="static/new.js"></script>
